// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenSelector displays placeholder selector 1`] = `
<div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
  >
    <div
      class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-align-items-xs-center-10"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3"
      >
        <svg>
          placeholder.svg
        </svg>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
      >
        <button
          class="MuiButtonBase-root-135 MuiButton-root-106 makeStyles-root-104 MuiButton-outlined-111 MuiButton-outlinedSecondary-113"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-107 makeStyles-label-105"
          >
            Select a Token
          </span>
          <span
            class="MuiTouchRipple-root-158"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TokenSelector displays selected token information 1`] = `
<div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
  >
    <div
      class="MuiGrid-root-1 MuiGrid-item-3"
    >
      <div
        class="MuiBox-root-105 MuiBox-root-106 Styled(MuiBox)-root-104"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-align-items-xs-center-10"
        >
          <div
            class="MuiGrid-root-1 MuiGrid-item-3"
          >
            <div
              class="MuiAvatar-root-109 MuiAvatar-circle-111 WithStyles(ForwardRef(Avatar))-root-107 WithStyles(ForwardRef(Avatar))-root-108 MuiAvatar-colorDefault-110"
              dimension="48"
            >
              <img
                alt="token icon"
                src="token.svg"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
          >
            <div
              class="MuiBox-root-105 MuiBox-root-119 Styled(MuiBox)-root-117 Styled(MuiBox)-root-118"
            >
              <p
                class="MuiTypography-root-121 WithStyles(ForwardRef(Typography))-root-120 MuiTypography-body1-123 MuiTypography-colorTextPrimary-146"
              >
                TK1
              </p>
            </div>
          </div>
          <div
            class="MuiGrid-root-1 MuiGrid-item-3"
          >
            <button
              aria-label="change token"
              class="MuiButtonBase-root-160 MuiIconButton-root-151"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-159"
              >
                <svg>
                  dropdown-arrow.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-183"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
